# VideoSummary

./: .env.example  .gitignore  README.md  config.example.yaml  conftest.py  pyproject.toml  task.md
app/: main.py
app/audio/: processor.py
app/cache/: manager.py
app/chunking/: chunker.py
app/config/: loader.py  schema.py
app/core/: cancellation.py  errors.py  events.py  models.py  pipeline.py  task_queue.py
app/downloader/: base.py  ytdlp.py
app/export/: exporters.py
app/llm/: base.py  openai_compat.py
app/stt/: base.py  whisper.py
app/subtitle/: cleaner.py  parser.py
app/summarizer/: prompts.py  summarizer.py
app/ui/: log_view.py  main_window.py  reporter.py  result_view.py  settings_dialog.py  task_list.py  worker.py
app/utils/: fs.py  logging_setup.py  paths.py  proxy.py  sanitize.py  subproc.py  tokens.py
docs/: architecture.md  requirements.md
packaging/: README.md  build.ps1  videosummary.spec
tests/fixtures/subtitles/: bilibili.json  sample.srt  sample.vtt  youtube.json3  youtube_auto_rolling.vtt
tests/fixtures/ytdlp/: bilibili_video.json  youtube_playlist_flat.json  youtube_video.json
tests/integration/: test_e2e.py  test_pipeline.py
tests/unit/: test_audio.py  test_cache.py  test_chunking.py  test_config.py  test_core.py  test_downloader.py  test_export.py  test_llm.py  test_proxy_sanitize.py  test_stt.py  test_subproc.py  test_subtitle.py  test_summarizer.py  test_ui.py  test_utils.py
